# mcp-powershell-exec

./: .env.example  .gitignore  API.md  IMPLEMENTATION_SUMMARY.md  MCP_CLI_Usage_Guide.md  PROJECT_STATUS.md  README.md  activate.ps1  claude_desktop_cli_config.json  claude_desktop_config.json  config.json.example  config.py  coverage.xml  install_deps.ps1  launch.py  llms-full.md  logging_setup.py  mcp-powershell-exec.code-workspace  mcp.json  mcp_resources.py  mcp_server.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_tests.ps1  sales.csv  server.py  simple_test.py  start-server.ps1  start-server.ps1.new  test_fastmcp_integration.py  test_init.json  test_server.py  test_tools.json
docker/: Dockerfile  docker-compose.yml
docs/: .dockerignore  API.md  MCP_PYTHON_SDK_README.md
examples/: README.md  mcp_cli_demo.ps1  sales_report.ps1  system_info.ps1  usage_guide.ipynb
src/: auth_manager.py  config.py  logging_setup.py  security.py
src/mcp_powershell_exec/: __init__.py
src/mcp_powershell_exec/core/: __init__.py  executor.py  formatters.py  security.py  types.py
src/mcp_powershell_exec/mcp/: __init__.py
tests/: test_cli.py  test_server.py  test_server_new.py
